<resources>
    <!--Font Family-->
    <string name="ff_regular">sans-serif</string>
    <string name="ff_medium">sans-serif-medium</string>

    <string name="app_name">Хайруллин Айрат</string>
    <string name="mobile_number">Мобильный</string>
    <string name="e_mail">E-mail</string>
    <string name="vk_profile">Профиль в VK</string>
    <string name="repo">Репозиторий</string>
    <string name="about">О себе</string>
    <string name="picture">Picture</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur
        adipisici elit, sed eiusmod tempor
        incidunt ut labore et dolore magna aliqua. Ut
        enim ad minim veniam, quis nostrud
        exercitation ullamco laboris nisi ut aliquid ex
        ea commodi consequat. Quis aute iure reprehenderit
        in voluptate velit esse cillum dolore
        eu fugiat nulla pariatur. Excepteur sint obcaecat
        cupiditat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.</string>
    <string name="user_profile_placeholder_image">Изменить фотографию профиля</string>
    <string name="user_profile_dialog_gallery">Загрузить из галереи</string>
    <string name="user_profile_dialog_camera">Сделать снимок</string>
    <string name="user_profile_dialog_cancel">Отмена</string>
    <string name="user_profile_dialog_title">Изменить фотографию профиля</string>
    <string name="user_profile_choise_message">Выберите фото</string>
    <string name="enter_correct_phone_number">Введите номер длиной от 11 до 20 символов</string>
    <string name="enter_correct_email">Введите корректную почту</string>
    <string name="enter_correct_vk_address">Корректное значение должно начинаться с \"vk.com/\"</string>
    <string name="enter_correct_github_address">Корректное значение должно начинаться с \"github.com/\"</string>

    <!--AuthActivity-->
    <string name="auth.authorization_enter">Войти</string>
    <string name="auth.email">Введите e-mail</string>
    <string name="auth.password">Введите пароль</string>
    <string name="auth.login">Войти</string>
    <string name="auth.remember">Забыли пароль?</string>
    <string name="rating">Рейтинг</string>
    <string name="write_code_lines">Написано строк кода</string>
    <string name="projects">Проектов</string>
</resources>
