<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/spacing_medial_24"
            android:paddingTop="@dimen/spacing_medial_24">

            <LinearLayout
                style="@style/TopToolbarStyle">

                <TextView
                    style="@style/TopToolbarTextViewStyle"
                    android:fontFamily="sans-serif-condensed"
                    android:text="5"/>

                <TextView
                    style="@style/TopToolbarTextViewStyle"
                    android:fontFamily="sans-serif-condensed"
                    android:text="Рейтинг"/>
            </LinearLayout>

            <View
                style="@style/VerticalLinesStyle"/>

            <LinearLayout
                style="@style/TopToolbarStyle"
                android:layout_weight="2">

                <TextView
                    style="@style/TopToolbarTextViewStyle"
                    android:fontFamily="sans-serif-condensed"
                    android:text="5"/>

                <TextView
                    style="@style/TopToolbarTextViewStyle"
                    android:fontFamily="sans-serif-condensed"
                    android:text="Написано строк кода"/>
            </LinearLayout>

            <View
                style="@style/VerticalLinesStyle"/>

            <LinearLayout
                style="@style/TopToolbarStyle">

                <TextView
                    style="@style/TopToolbarTextViewStyle"
                    android:fontFamily="sans-serif-condensed"
                    android:text="5"/>

                <TextView
                    style="@style/TopToolbarTextViewStyle"
                    android:fontFamily="sans-serif-condensed"
                    android:text="Проектов"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/Icon.left"
                android:contentDescription="@string/picture"
                android:src="@drawable/ic_call_black_24dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phone_et"
                        style="@style/EditTextStartStyle"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/mobile_number"
                        android:inputType="phone"
                        android:text="01234567890"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/call_img"
                style="@style/Icon.right"
                android:contentDescription="@string/picture"
                android:src="@drawable/ic_phone_in_talk_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginLeft="72dp"
            android:background="@color/gray_light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/Icon.left"
                android:contentDescription="@string/picture"
                android:src="@drawable/ic_email_black_24dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email_et"
                        style="@style/EditTextStartStyle"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/e_mail"
                        android:inputType="textEmailAddress"
                        android:text="abc@def.com"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/Icon.right"
                android:contentDescription="@string/picture"
                android:src="@drawable/ic_send_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginLeft="72dp"
            android:background="@color/gray_light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/Icon.left"
                android:contentDescription="@string/picture"
                android:src="@drawable/ic_vk"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/vk_et"
                        style="@style/EditTextStartStyle"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/vk_profile"
                        android:text="vk.com/id0123456"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/Icon.right"
                android:contentDescription="@string/picture"
                android:src="@drawable/ic_remove_red_eye_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginLeft="72dp"
            android:background="@color/gray_light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/Icon.left"
                android:contentDescription="@string/picture"
                android:src="@drawable/ic_github_circle"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/github_et"
                        style="@style/EditTextStartStyle"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/repo"
                        android:text="github.com/user/DevIntensie"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/Icon.right"
                android:contentDescription="@string/picture"
                android:src="@drawable/ic_remove_red_eye_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginLeft="72dp"
            android:background="@color/gray_light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/Icon.left"
                android:contentDescription="@string/picture"
                android:src="@drawable/ic_account_circle_black_24dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/about_et"
                        style="@style/EditTextStartStyle"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/about"
                        android:scrollHorizontally="false"
                        android:text="@string/lorem_ipsum"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>