<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activities.MainActivity"
    android:id="@+id/navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_Coordinator_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">
            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="@color/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">
                <ImageView
                    android:id="@+id/user_photo_img"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/profile_image_size_256"
                    android:scaleType="centerCrop"
                    android:src="@drawable/images2"
                    android:fitsSystemWindows="true"/>
                <android.support.v7.widget.Toolbar
                    android:theme="@style/AppTheme.PopupOverlay"
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    android:titleTextColor="@color/white"
                    app:layout_collapseMode="pin"/>
            </android.support.design.widget.CollapsingToolbarLayout>


        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/spacing_medial_24"
                    android:paddingTop="@dimen/spacing_medial_24">

                    <LinearLayout
                        style="@style/TopToolbarStyle">

                        <TextView
                            style="@style/TopToolbarTextViewStyle"
                            android:fontFamily="sans-serif-condensed"
                            android:text="5"/>

                        <TextView
                            style="@style/TopToolbarTextViewStyle"
                            android:fontFamily="sans-serif-condensed"
                            android:text="Рейтинг"/>
                    </LinearLayout>

                    <View
                        style="@style/VerticalLinesStyle"/>

                    <LinearLayout
                        style="@style/TopToolbarStyle"
                        android:layout_weight="2">

                        <TextView
                            style="@style/TopToolbarTextViewStyle"
                            android:fontFamily="sans-serif-condensed"
                            android:text="5"/>

                        <TextView
                            style="@style/TopToolbarTextViewStyle"
                            android:fontFamily="sans-serif-condensed"
                            android:text="Написано строк кода"/>
                    </LinearLayout>

                    <View
                        style="@style/VerticalLinesStyle"/>

                    <LinearLayout
                        style="@style/TopToolbarStyle">

                        <TextView
                            style="@style/TopToolbarTextViewStyle"
                            android:fontFamily="sans-serif-condensed"
                            android:text="5"/>

                        <TextView
                            style="@style/TopToolbarTextViewStyle"
                            android:fontFamily="sans-serif-condensed"
                            android:text="Проектов"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/Icon.left"
                        android:contentDescription="@string/picture"
                        android:src="@drawable/ic_call_black_24dp"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="@dimen/size_large_72"
                        android:layout_marginLeft="@dimen/spacing_medium_32"
                        android:layout_marginRight="@dimen/spacing_normal_16"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/phone_et"
                                style="@style/EditTextStartStyle"
                                android:fontFamily="sans-serif-condensed"
                                android:hint="@string/mobile_number"
                                android:inputType="phone"
                                android:text="01234567890"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/call_img"
                        style="@style/Icon.right"
                        android:contentDescription="@string/picture"
                        android:src="@drawable/ic_phone_in_talk_black_24dp"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_size"
                    android:layout_marginLeft="72dp"
                    android:background="@color/gray_light"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/Icon.left"
                        android:contentDescription="@string/picture"
                        android:src="@drawable/ic_email_black_24dp"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="@dimen/size_large_72"
                        android:layout_marginLeft="@dimen/spacing_medium_32"
                        android:layout_marginRight="@dimen/spacing_normal_16"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/email_et"
                                style="@style/EditTextStartStyle"
                                android:fontFamily="sans-serif-condensed"
                                android:hint="@string/e_mail"
                                android:inputType="textEmailAddress"
                                android:text="abc@def.com"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <ImageView
                        style="@style/Icon.right"
                        android:contentDescription="@string/picture"
                        android:src="@drawable/ic_send_black_24dp"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_size"
                    android:layout_marginLeft="72dp"
                    android:background="@color/gray_light"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/Icon.left"
                        android:contentDescription="@string/picture"
                        android:src="@drawable/ic_vk"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="@dimen/size_large_72"
                        android:layout_marginLeft="@dimen/spacing_medium_32"
                        android:layout_marginRight="@dimen/spacing_normal_16"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/vk_et"
                                style="@style/EditTextStartStyle"
                                android:fontFamily="sans-serif-condensed"
                                android:hint="@string/vk_profile"
                                android:text="vk.com/id0123456"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <ImageView
                        style="@style/Icon.right"
                        android:contentDescription="@string/picture"
                        android:src="@drawable/ic_remove_red_eye_black_24dp"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_size"
                    android:layout_marginLeft="72dp"
                    android:background="@color/gray_light"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/Icon.left"
                        android:contentDescription="@string/picture"
                        android:src="@drawable/ic_github_circle"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="@dimen/size_large_72"
                        android:layout_marginLeft="@dimen/spacing_medium_32"
                        android:layout_marginRight="@dimen/spacing_normal_16"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/github_et"
                                style="@style/EditTextStartStyle"
                                android:fontFamily="sans-serif-condensed"
                                android:hint="@string/repo"
                                android:text="github.com/user/DevIntensie"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <ImageView
                        style="@style/Icon.right"
                        android:contentDescription="@string/picture"
                        android:src="@drawable/ic_remove_red_eye_black_24dp"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_size"
                    android:layout_marginLeft="72dp"
                    android:background="@color/gray_light"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/Icon.left"
                        android:contentDescription="@string/picture"
                        android:src="@drawable/ic_account_circle_black_24dp"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_medium_32"
                        android:layout_marginRight="@dimen/spacing_normal_16"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/about_et"
                                style="@style/EditTextStartStyle"
                                android:fontFamily="sans-serif-condensed"
                                android:hint="@string/about"
                                android:scrollHorizontally="false"
                                android:text="@string/lorem_ipsum"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_create_black_24dp"
            app:layout_anchor="@id/appbar_layout"
            app:layout_anchorGravity="bottom|right"
            android:layout_marginRight="@dimen/fab_right_space"/>
    </android.support.design.widget.CoordinatorLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>